Update input in main to remove '.tex'

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -87,10 +87,10 @@
 %%%
  % Chapitres
 %%%
-\input{Applicatives/application.tex}
-\input{Physiques/physical.tex}
-\input{Réseau/network.tex}
-\input{Web/web.tex}
+\input{Web/web}
+\input{Réseau/network}
+\input{Physiques/physical}
+\input{Applicatives/application}
 
 %%%
  % Conclusion
