--- a/latex/Physical/physical.tex
+++ b/latex/Physical/physical.tex
@@ -1,5 +1,5 @@
 %%%
- % File:     application.tex
+ % File:     physical.tex
  % Author:   Hackademics Forum <hackademicsforum6@gmail.com>
  % Project:  MindMap des vulnérabilités
  % Released: 03/08/2016
@@ -11,15 +11,15 @@
 %!TeX spellcheck = fr_FR
 
 %%%
- % Vulnérabilités applicatives
+ % Vulnérabilités physiques
 %%%
-\chapter{Vulnérabilités applicatives}\label{vulnerabilites:applicatives}
+\chapter{Vulnérabilités physiques}\label{vulnerabilites:physiques}
 
-Intro vulnérabilités applicatives
+Intro vulnérabilités physiques
 
 %%%
  % Inclusion des sections
 %%%
-\input{Applicatives/buffer_overflow}
+\input{Physical/wifi}
 
 \endinput
