--- a/latex/main.tex
+++ b/latex/main.tex
@@ -88,9 +88,9 @@
  % Chapitres
 %%%
 \input{Web/web}
-\input{Reseau/network}
-\input{Physiques/physical}
-\input{Applicatives/application}
+\input{Network/network}
+\input{Physical/physical}
+\input{Application/application}
 
 %%%
  % Conclusion
