--- a/latex/Web/csrf.tex
+++ b/latex/Web/csrf.tex
@@ -13,6 +13,7 @@
 %%%
  % Vulnérabilités CSRF
 %%%
+\newpage
 \section{Cross-Site Request Forgery (CSRF / XSRF)}\label{vulnerabilites:web:csrf}
 
 Intro vulnérabilités CSRF
