--- a/latex/Web/sqli.tex
+++ b/latex/Web/sqli.tex
@@ -13,6 +13,7 @@
 %%%
  % Vulnérabilités SQLi
 %%%
+\newpage
 \section{Structured Query Language Injection (SQLi)}\label{vulnerabilites:web:sqli}
 
 Intro vulnérabilités SQLi
