--- a/latex/Web/xss.tex
+++ b/latex/Web/xss.tex
@@ -13,6 +13,7 @@
 %%%
  % Vulnérabilités XSS
 %%%
+\newpage
 \section{Cross-Site Scripting (XSS)}\label{vulnerabilites:web:xss}
 
 Intro vulnérabilités XSS
