--- a/latex/Network/spoofing.tex
+++ b/latex/Network/spoofing.tex
@@ -13,6 +13,7 @@
 %%%
  % Vulnérabilités Spoofing
 %%%
+\newpage
 \section{Usurpation (Spoofing)}\label{vulnerabilites:reseau:spoofing}
 
 Intro vulnérabilités spoofing
