Optimize LaTeX + absolute link correction

--- a/latex/Coverpage/coverpage.tex
+++ b/latex/Coverpage/coverpage.tex
@@ -18,4 +18,41 @@
  % Page de titre
 %%%
 
+\begin{titlepage}
+\begin{center}
+
+% Upper part of the page. The '~' is needed because only works if a paragraph has started.
+% \includegraphics[width=0.35\textwidth]{./logo}~\\[1cm]
+
+\textsc{\LARGE Hackademics}\\[1.5cm]
+
+\textsc{\Large }\\[0.5cm]
+
+% Title
+\HRule \\[0.4cm]
+
+{\huge \bfseries Hackademics MindMap\\
+Mind Map des vulnérabilités en sécurité informatique \\[0.4cm] }
+
+\HRule \\[1.5cm]
+
+% Author and supervisor
+\begin{minipage}{0.4\textwidth}
+\begin{flushleft} \large
+\emph{Auteurs:}\\
+\textsc{AnOnyme77}\\
+\textsc{Blend}\\
+\textsc{Le\_JC}\\
+\textsc{L'OMBRE}
+\end{flushleft}
+\end{minipage}
+
+\vfill
+
+% Bottom of the page
+{\large \today}
+
+\end{center}
+\end{titlepage}
+
 \endinput
