--- a/latex/Introduction/introduction.tex
+++ b/latex/Introduction/introduction.tex
@@ -18,14 +18,25 @@
 
 %% Aspects généraux %%
 
-...
+Ce projet a été réalisé par les membres du forum Hackademics.fr.
+
+Son but est de présenter un MindMap des vulnérabilités en sécurité informatique.
+
+Pour ce faire, le projet est composé de deux parties : 
+\begin{itemize}
+\item Un mind map (visuel) représentant les différents types de vulnérabilités ainsi que les vulnérabilités liées à ces derniers
+\item Ce document (écrit) qui a pour but de présenter les différentes vulnérabilités abordées avec quelques informations sur ces dernières.
+\end{itemize}
 
 %% Problématique %%
 
-...
+\section{But des différentes parties}
 
-%% Plan %%
+\subsection{La partie visuelle}
+Ce mind map doit pouvoir aider tout expert en sécurité informatique à re-localiser une faille particulière dans la pléthore de faille existantes. 
+Une fois cette faille et son type localisé, l doit être possible de se référer à ce document.
 
-...
+ \subsection{La partie écrite}
+ L'idée générale est que ce document devrait pouvoir être utilisé comme aide-mémoire en cas de besoin.  Son but n'est pas d'être exhaustif mais de pouvoir s'en sortir et se souvenir des informations les plus importantes concernant une faille.
 
 \endinput
