--- a/latex/Application/buffer_overflow.tex
+++ b/latex/Application/buffer_overflow.tex
@@ -23,7 +23,56 @@ Un Buffer Overflow ou dépassement de tampon se produit lorsque un programme ou 
 
 Chez les processeurs X86, le STACK commence a l’extrémité supérieure de la mémoire (ex:0xffffffff) et pousse vers le bas (vers 0x00000000). Le mot STACK viens de l'anglais et veut dire PILE. Il se nomme ainsi car il se comporte en LIFO (Last In First Out): si quelque chose est ajouté (PUSH,écriture), la PILE est augmentée, au contraire si quelque chose est lu (POP), la PILE est abaissée: l'élément est lu et supprimé. Il existe une troisième méthode nommée TOP ou PEEK, ou l'élément est simplement lu mais pas supprimé. Le pointeur de PILE (ESP) est toujours à la dernière adresse de la PILE.
 
-\includegraphics[scale=0.3]{/home/nait/Bureau/mindmap/MindMap/latex/Application/assets/stack.png}
+\begin{center}
+\vspace{0.5cm}
+\includegraphics[scale=0.3]{Application/assets/stack.png}
+\vspace{0.5cm}
+\end{center}
+
+Le programme ci-dessous simule le scénario où un programme attend un mot de passe de l'utilisateur. Si le mot de passe est correct,des privilèges root sont accordés à l'utilisateur.
+
+\begin{center}
+\vspace{0.5cm}
+\includegraphics[scale=0.3]{/home/nait/Bureau/mindmap/MindMap/latex/Application/assets/codebo.png}
+\vspace{0.5cm}
+\end{center}
+
+Démarrons le programme avec le mot de passe : ‘hackademics'
+
+\begin{center}
+\vspace{0.5cm}
+\includegraphics[scale=0.3]{Application/assets/bmdp.png}
+\vspace{0.5cm}
+\end{center}
+
+Le programme fonctionne comme prévu. Le mot de passe correspond et les privilèges root sont donnés.Mais savez-vous qu'il y a un risque de Buffer Overflow dans ce programme. La fonction gets () ne vérifie pas les limites du tableau et peut ainsi permettre d'écrire une chaîne de longueur supérieure à la taille de la mémoire tampon. Maintenant, vous pouvez vous imaginer ce que peut faire une personne mal intentionnée avec ce genre de vulnérabilité.
+
+\vspace{0.5cm}
+
+Voici un exemple:
+
+\begin{center}
+\vspace{0.5cm}
+\includegraphics[scale=0.3]{Application/assets/mmdp.png}
+\vspace{0.5cm}
+\end{center}
+
+Dans l'exemple ci-dessus, même après la saisie d'un mot de passe incorrect, le programme a fonctionné comme si le bon mot de passe avait été entré.
+Ce que l'utilisateur a fait, est qu'il a entré une chaine de caractères plus grande que prévue par la mémoire tampon. La valeur de "Mot de Passe" a donc été écrasée et a été passée a non nul. Ainsi en dépit d'un mauvais mot de passe, le privilèges ROOT ont été accordés.\newline 
+
+Comment déterminer si vous êtes vulnérable.\newline 
+
+Si votre programme:\newline 
+est écrit dans une langue (ou dépend d'un programme qui est écrit dans une langue) qui permet de copier des données d'un buffer sur le stack vers un autre sans en vérifier au préalable la taille et qui n'utilise pas de valeurs canaries ou de stack non-executable pour éviter un Buffer Overflow. Il est probable que l'application soit vulnérable à un dépassement de tampon.\newline 
+
+pour éviter un dépassement de tampon, les conseils généraux pour les développeurs sont de suivre de bonnes pratiques de programmation comme par exemple:\newline 
+Assurez-vous que la vérification de la mémoire se fait correctement dans le programme à l'aide des utilitaires comme valgrind memcheck.
+Utilisez fgets () au lieu de gets ().
+Utilisez strncmp () au lieu de strcmp (), strncpy () au lieu de strcpy () et ainsi de suite. déployer sur des systèmes capables d'utiliser des piles non exécutables, tels que:Des puces AMD et Intel x86-64  avec les systèmes d'exploitation 64 bits associés.
+Utilisez des langages de programmation de plus haut niveau qui sont fortement typés et qui interdisent l'accès direct à la mémoire.
+Valider l'entrée pour empêcher  des données inattendues d'être traitées, comme étant trop longue, ou de type de données incorrect, contenant des caractères "junk", etc.
+utiliser le principe du moindre privilège
+utiliser des compilateurs qui protègent contre les Buffer Overflow 
 
 \subsection{Heap Overflow}\label{vulnerabilites:applicatives:buffer-overflow:heap}
 
