--- a/latex/main.tex
+++ b/latex/main.tex
@@ -29,12 +29,12 @@
 
 %% Metadonnées pour le PDF %%
 \pdfinfo {%
-		/Author (AnOnyme77,
-						Blend,
-						Le\_JC,
-						L'OMBRE)                 % Auteurs du document
-		/Title (Hackademics MindMap)  % Titre
-		/Subject (Mind map des vulnérabilités en sécurité informatique)                % Sujet
+		/Author (Premier Auteur,
+						Deuxième Auteur,
+						Troisième Auteur,
+						Quatrième Auteur)                 % Auteurs du document
+		/Title (Nom du Projet - Sujet du Projet)  % Titre
+		/Subject (Sujet du Projet)                % Sujet
 		/Keywords (Tag1;Tag2;Tag3)                % Mots-clés
 		/CreationDate (D:\pdfdate)                % Date de création
 		/Creator (TexMaker)                       % Logiciel de création
@@ -43,12 +43,12 @@
 \makeatletter
 \@ifpackageloaded{hyperref}{%
 		\hypersetup{
-			pdfauthor={AnOnyme77,
-						Blend,
-						Le\_JC,
-						L'OMBRE},                 % Auteurs du document
-			pdftitle={Hackademics MindMap},  % Titre
-			pdfsubject={Mind map des vulnérabilités en sécurité informatique},                % Sujet
+			pdfauthor={Premier Auteur,
+								Deuxième Auteur,
+								Troisième Auteur,
+								Quatrième Auteur},                 % Auteurs du document
+			pdftitle={Nom du Projet - Sujet du Projet},  % Titre
+			pdfsubject={Sujet du Projet},                % Sujet
 			pdfkeywords={Tag1, Tag2, Tag3},              % Mots-clés
 			pdfstartview={FitH},                         % Ajuste la page à la hauteur de l'écran
 			pdfcreator={TexMaker}                        % Logiciel de création
@@ -57,14 +57,14 @@
 \makeatother
 
 %%%
- % DOCUMENT
-%%%
-\begin{document}
-
-%%%
  % PAGES DE COUVERTURE
 %%%
 \input{Coverpage/coverpage}
+
+%%%
+ % DOCUMENT
+%%%
+\begin{document}
 
 %%%
  % Table de matière
