Optimisation du latex

--- a/latex/Coverpage/coverpage.tex
+++ b/latex/Coverpage/coverpage.tex
@@ -22,9 +22,7 @@
 \begin{center}
 
 % Upper part of the page. The '~' is needed because only works if a paragraph has started.
-% \includegraphics[width=0.35\textwidth]{./logo}~\\[1cm]
-
-\textsc{\LARGE Hackademics}\\[1.5cm]
+\includegraphics[width=0.5\textwidth]{Coverpage/logo}~\\[1cm]
 
 \textsc{\Large }\\[0.5cm]
 
