--- a/latex/Network/spoofing.tex
+++ b/latex/Network/spoofing.tex
@@ -94,20 +94,28 @@ L'attaque peut donc se résumer ainsi (ici, la machine A est celle de l'attaquan
 
 \subsubsection{Contre-mesures}\label{vulnerabilites:reseau:spoofing:ip:countermeasures}
 
-Les contre-mesures contre l'IP Spoofing sont de plusieurs ordres. Certaines sont de la responsabilité des sysadmin, d'autres relèvent des opérateurs internet :
+Les contre-mesures contre l'IP Spoofing sont de plusieurs ordres. Certaines sont de la responsabilité des opérateurs internet, d'autres relèvent des sysadmin :
 
+\begin{tabbing}
+\end{tabbing}
+\textbf{Opérateurs internet}
 
-Pour des attaques en aveugle, telles que celles utilisées par les DDOS en rebond, la balle est dans le camps des opérateurs : une adresse IP source peut en théorie etre bloquée au niveau d'un routeur BGP. Pour des raisons de performance, le opérateurs n'implémentent pas ce genre de controle.
+\begin{itemize}
+\item Pour des attaques en aveugle, telles que celles utilisées par les DDOS en rebond, la balle est dans le camps des opérateurs : une adresse IP source peut en théorie etre bloquée au niveau d'un routeur BGP. Pour des raisons de performance, les opérateurs n'implémentent pas ce genre de controle.
+\item Certains acteurs (opérateurs, hébergeurs, grands fournisseurs de services) proposent des solutions de mitigation des DDOS. Ces solutions consistent en gros à mobiliser une quantité de bande passante réseau suffisante pour absorber le trafic DDOS. Elles ont tendance à etre couteuses et ont parfois du mal à suivre la "course aux armements" face à des attaques de plus en plus importantes.
+\end{itemize}
 
-
-Au niveau du réseau d'une organisation, meme très grande, ne pas se contenter de règles de filtrage par interfaces réseau, il faut y ajouter des filtres sur les adresses IP ou les sous-réseaux (subnets), appliquer une isolation stricte au niveau IP. Par exemple, une interface connectée au réseau 192.168.1.0/24 ne doit pas laisser passer de paquets venant d'une autre plage d'adresse.
-
-
-Pour ce qui est de la prise de controle, la solution est plus simple : ne pas utiliser de services obsolètes comme rsh ou rlogin.
-
-Les services modernes de prise de controle à distance, comme SSH, sont une alternative adéquate. Le filtrage par IP peut rester nécessaire, par exemple pour l'accès à une interface de management web, mais ne doit pas être la seule protection. L'accès à ce genre d'UI devant être sécurisé par d'autres moyens (authentification SSL si possible par certificats).
-
-La plupart des systèmes d'exploitation modernes rendent la prédiction des numéros de séquence TCP très difficile, voire quasimment impossible. Il n'est pas certain que les objets connectés, de fonctionnalités minimales, appliquent ces bonnes pratiques.
+\begin{tabbing}
+\end{tabbing}
+\textbf{Sysadmin}
+\begin{itemize}
+\item Au niveau du réseau d'une organisation, meme très grande, ne pas se contenter de règles de filtrage par interfaces réseau, il faut y ajouter des filtres sur les adresses IP ou les sous-réseaux (subnets), appliquer une isolation stricte au niveau IP. Par exemple, une interface connectée au réseau 192.168.1.0/24 ne doit pas laisser passer de paquets venant d'une autre plage d'adresse.
+\item Pour ce qui est de la prise de controle, la solution est plus simple : ne pas utiliser de services obsolètes comme rsh ou rlogin. Les services modernes de prise de controle à distance, comme SSH, sont une alternative adéquate. Le filtrage par IP peut rester nécessaire, par exemple pour l'accès à une interface de management web, mais ne doit pas être la seule protection. L'accès à ce genre d'UI devant être sécurisé par d'autres moyens (authentification SSL si possible par certificats).
+\item La plupart des systèmes d'exploitation modernes rendent la prédiction des numéros de séquence TCP très difficile, voire quasimment impossible.
+\item Il n'est pas certain que les objets connectés, de fonctionnalités minimales, appliquent les bonnes pratiques, tant au niveau système/réseau que controle d'accès. Des attaques record récentes (septembre 2016) ont utilisé massivement des caméras IP compromises, que les fournisseurs de solutions DDOS n'ont pas pu contrer (KrebsOnSecurity.com, par exemple).
+\end{itemize}
+\begin{tabbing}
+\end{tabbing}
 
 
 
